--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
 </head>
 
 <body>
+   <!-- Navigation -->
     <nav class="nav-extended  grey darken-4">
         <div class="nav-wrapper">
             <a style="margin-left: 10px" href="#" class="brand-logo">Megatheos</a>
@@ -55,20 +56,24 @@
             </ul>
         </div>
     </nav>
-
+    
+    <!-- Side navigator -->
     <ul class="sidenav" id="mobile-demo">
         <li><a href="about.html"><i class="material-icons left">info</i>About</a></li>
         <li><a href="https://github.com/Lucifer25x/megatheos"><i class="material-icons left">code</i>GitHub</a></li>
     </ul>
 
+    <!-- Tabs -->
     <div id="all-books" class="col s12 row">
 
     </div>
 
     <div id="favorites" class="col s12 row">
+        <!-- Add button -->
         <a id="add" class="btn-floating btn-large waves-effect waves-light red modal-trigger" href="#modal1"><i
                 class="material-icons">add</i></a>
-
+   
+        <!-- Books list modal -->
         <div id="modal1" class="modal bottom-sheet">
             <div class="modal-content">
                 <h4>Book List</h4>
