Added some explanations

--- a/public/reading.html
+++ b/public/reading.html
@@ -18,20 +18,22 @@
     <iframe id="preview" src="" frameborder="0"></iframe>
 
     <script>
+        // Import packages
         const {ipcRenderer} = require('electron');
         const path = require('path');
         
         window.onload = () => {
-            const preview = document.getElementById('preview');
-            const params = new URLSearchParams(window.location.search);
-            const file = params.get('file');
-            preview.src = file;
-            preview.width = window.innerWidth;
-            preview.height = window.innerHeight;
+            const preview = document.getElementById('preview'); // Iframe
+            const params = new URLSearchParams(window.location.search); // Get parameters from the url
+            const file = params.get('file'); // Get file path from url (`?file='location'`)
+            preview.src = file; // Set iframe source
+            preview.width = window.innerWidth; // Set iframe width
+            preview.height = window.innerHeight; // Set iframe height
         }
 
         // Home Page
         ipcRenderer.on('home', () => {
+            // Set location to the index.html
             window.location.href = path.join(__dirname, 'index.html');
         })
     </script>
