--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
             background-color: #424242;
         }
 
-        #favorites #add {
+        #favorites #add,
+        #collections #create-collection {
             position: fixed;
             bottom: 15px;
             right: 15px;
@@ -70,7 +71,7 @@
 
     <div id="favorites" class="col s12 row">
         <!-- Add button -->
-        <a id="add" class="btn-floating btn-large waves-effect waves-light red modal-trigger" href="#modal1"><i
+        <a id="add" class="btn-floating btn-large waves-effect waves-light blue modal-trigger" href="#modal1"><i
                 class="material-icons">add</i></a>
 
         <!-- Books list modal -->
@@ -90,7 +91,18 @@
     </div>
 
     <div id="collections" class="col s12 row">
-        <h2>Coming soon!</h2>
+        <div class="container">
+
+            <ul class="collection with-header" id="collection-list">
+                <li class="collection-header">
+                    <h4 id="collection-header-text">Collections</h4>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Create Collection -->
+        <a id="create-collection" class="btn-floating btn-large waves-effect waves-light blue"><i
+                class="material-icons">add</i></a>
     </div>
 
     <div id="settings" class="col s12">
@@ -102,7 +114,7 @@
                         <th>Select</th>
                     </tr>
                 </thead>
-            
+
                 <tbody>
                     <tr>
                         <td>Select Language</td>
