Book Collections Move JS code to JS file Move JS code to JS file Book Collections Move main.js to src folder Create JS file for reading.html

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
     </div>
 
     <script src="materialize/js/materialize.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="./src/main.js"></script>
     <script>
         M.AutoInit();
     </script>
