--- a/public/collection.html
+++ b/public/collection.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="materialize/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <title>Collection</title>
+    <style>
+        body {
+            background-color: #424242;
+        }
+
+        #add {
+            position: fixed;
+            bottom: 15px;
+            right: 15px;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Coming Soon!</h1>
+    <div id="collection" class="col s12 row">
+
+        <!-- Add Button -->
+        <a id="add" class="btn-floating btn-large waves-effect waves-light blue modal-trigger" href="#modal1"><i
+                class="material-icons">add</i></a>
+
+        <!-- Books list modal -->
+        <div id="modal1" class="modal bottom-sheet">
+            <div class="modal-content">
+                <h4 id="book-list-text">Book List</h4>
+
+                <ul class="collection" id="book-collection">
+
+                </ul>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat"><span
+                        id="close-text">Close</span></a>
+            </div>
+        </div>
+    </div>
+
+    <script src="materialize/js/materialize.min.js"></script>
+    <script src="./src/collection.js"></script>
 </body>
+
 </html>
